@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [PORTAL] [IDP] Refresh token support through OAuth2 flow
 ### Fixed
 - [SYSTEM] [CERTIFICATES] Protect used certificates when attempted to be deleted
+- [PORTAL] [OPENID] Improve error returns and code quality
 
 
 ## [2.8.0] - 2023-06-28
